apps/rke2/doom/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doom
  namespace: doom
  labels:
    app: doom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doom
  template:
    metadata:
      labels:
        app: doom
    spec:
      containers:
      - name: doom
        image: kasmweb/doom:1.19.0
        ports:
        - name: vnc
          containerPort: 6901
        volumeMounts:
        - name: dshm
          mountPath: /dev/shm
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
          sizeLimit: 512Mi
