apps/rke2/doom/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: doom
  namespace: doom
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: doom-doom@kubernetescrd
spec:
  selector:
    app: doom
  ports:
    - name: vnc
      port: 6901
      targetPort: 6901
  type: ClusterIP
